force-app/main/default/objects/Torc_Application__c/Torc_Application__c.object-meta.xml
<CustomObject>
    <label>Torc Application</label>
    <nameField>
        <label>Torc Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Torc Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>