force-app/main/default/objects/Torc_Application__c/fields/availableStartDate__c.field-meta.xml
<CustomField>
    <fullName>availableStartDate__c</fullName>
    <label>Available Start Date</label>
    <type>Date</type>
</CustomField>