force-app/main/default/objects/Torc_Application__c/fields/Delete_From_Platform__c.field-meta.xml
<CustomField>
    <fullName>Delete_From_Platform__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete From Platform</label>
    <type>Checkbox</type>
</CustomField>