force-app/main/default/objects/Torc_Application__c/fields/Friendly_Name__c.field-meta.xml
<CustomField>
    <fullName>Friendly_Name__c</fullName>
    <formula>LEFT(Torc_Job_Type__r.Name +&apos; - &apos; + Torc_User__r.Name,80)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Friendly Name</label>
    <type>Text</type>
</CustomField>