force-app/main/default/objects/Torc_Application__c/fields/Job_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Type_Name__c</fullName>
    <formula>Torc_Job_Type__r.title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Type Name</label>
    <type>Text</type>
</CustomField>