force-app/main/default/objects/Torc_Application__c/fields/jobTypeId__c.field-meta.xml
<CustomField>
    <fullName>jobTypeId__c</fullName>
    <externalId>true</externalId>
    <label>jobTypeId</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>