force-app/main/default/objects/Torc_Application__c/fields/Preferred_Rate__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Rate__c</fullName>
    <label>Preferred Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>